@@ -37,14 +37,16 @@ angular.module('News').controller 'SettingsController',
 			$scope.error = true
 
 
-	$scope.importGoogleReader = (fileContent) =>
+	$scope.importArticles = (fileContent) =>
 		$scope.jsonError = false
-		ShowAll.setShowAll(true)
+		$scope.loading = true
 
 		try
 			parsedJSON = JSON.parse(fileContent)
-			FeedBusinessLayer.importGoogleReader(parsedJSON)
+			FeedBusinessLayer.importArticles parsedJSON, ->
+				$scope.loading = false
 		catch error
 			$scope.jsonError = true
+			$scope.loading = false
 
 ]
