@@ -233,16 +233,16 @@ describe 'Persistence', ->
 		expect(@req.post).toHaveBeenCalledWith('news_feeds_create', params)
 
 
-	it 'should do a proper import google reader request', =>
+	it 'should do a proper import articles request', =>
 		params =
 			data:
 				json: {"some": "json"}
-			onSuccess: ->
+			onSuccess: jasmine.any(Function)
 
-		@Persistence.importGoogleReader(params.data.json, params.onSuccess)
+		@Persistence.importArticles(params.data.json, ->)
 
 
-		expect(@req.post).toHaveBeenCalledWith('news_feeds_import_googlereader',
+		expect(@req.post).toHaveBeenCalledWith('news_feeds_import_articles',
 			params)
 
 
